# playground

./: .gitignore  build.sbt
.github/workflows/: ci.yml  scala-2.12-ci.yml  scala-2.13-ci.yml  scala-ci.yml
agda/src/: AgdaBasics.agda
clojure/: CHANGELOG.md
fs2/: .gitignore  .scalafmt.conf  build.sbt  scalastyle-config.xml
fs2/project/: Build.scala  plugins.sbt
fs2/src/main/scala/fs2pg/: ConversionResult.scala  Main.scala  SessionExecutor.scala  Stats.scala
go/: wut.go
haskell/: HLint.hs  LICENSE  README.md  default.nix  haskell.cabal  release.nix  shell.nix
haskell/src/: Algebra.hs  Either.hs  Fonts.hs  Functor.hs  HaxlEx.hs  Joy.hs  Lists.hs  Maybe.hs  MonadHom.hs  Overloaded.hs  Parallel.hs  ParamEff1.hs  Pascal.hs  RecursionSchemes.hs  SimpleError.hs  SimplePrelude.hs  TailrecM.hs  Tardis.hs  TestLint.hs
haskell/src/Fonts/: DataSource.hs
haskell/test/: CacheSpec.hs  FontSpec.hs  Spec.hs
kotlin/: build.gradle
kotlin/src/main/kotlin/core/: Option.kt  ReadConf.kt  User.kt
kotlin/src/test/kotlin/core/: ReadConfTest.kt
purescript/: README.md  bower.json
purescript/src/: Main.purs  Printf.purs
react-app/: package.json
rust/: Cargo.toml
rust/src/: main.rs  tests.rs
scala/: README.md  build.sbt
scala-2.12/: build.sbt
scala-2.12/project/: Build.scala
scala-2.12/src/main/scala/: calc.scala  cofree.scala  compose.scala  kleisli.scala  main.scala  mapswitch.scala  traverses.scala
scala-2.12/src/main/scala/playground/: calc.scala  compose.scala  kleisli.scala  main.scala  mapswitch.scala  matching.scala  traverses.scala
scala-2.12/src/main/scala/playground/stack/: Counter.scala  Free.scala
scala-2.12/src/main/scala/stack/: Counter.scala  Free.scala
scala-2.12/src/test/resources/: logback-test.xml
scala-2.12/src/test/scala/playground/: MatchingSpec.scala
scala-2.13/: .gitignore  build.sbt
scala-2.13/project/: Build.scala
scala-2.13/src/main/scala/: errors.scala  future.scala  validated.scala
scala-2.13/src/main/scala/playground/: StringTests.scala
scala-2.13/src/test/scala/playground/: TestSpec.scala
scala-kafka/: build.sbt
scala-kafka/src/main/resources/: logback.xml
scala-kafka/src/main/scala/scala-kafka/: Main.scala  WordCountDemo.scala
scala-skunk/: build.sbt
scala-skunk/src/main/resources/: sample.json
scala-skunk/src/main/scala/: Graphics.scala  Interface.scala  Main.scala  Sensors.scala  TemperatureData.scala
scala-skunk/src/test/scala/: GraphicsSpec.scala  InterfaceSpec.scala
scala/project/: Build.scala
scala/src/main/scala-2.12/pg/: appshape.scala  case.scala  eq.scala  forwut.scala
scala/src/main/scala-2.12/pg/eff/: first.scala
scala/src/main/scala-2.12/pg/json/: auto.scala  transform.scala
scala/src/main/scala-2.12/pg/native/: asm.scala
scala/src/main/scala-2.12/pg/tc/: Functor.scala
scala/src/main/scala-2.12/pg/tcs/: Either.scala  Maybe.scala  Semigroup.scala  Usage.scala
scala/src/main/scala/pg/: forwut.scala  theYear2000.scala
scala/src/test/scala/pg/: BigDecimalSpec.scala
scalaz/: build.sbt
scalaz/src/main/scala/: Stream.scala
src/main/scala/pg/: eq.scala  square.scala  theYear2000.scala
src/main/scala/pg/concurrent/: Future.scala
ts-app/: package-lock.json  package.json
wreqd/: LICENSE  README.md  stack.yaml  wreqd.cabal
wreqd/app/: Access.hs  Main.hs
(+3 files in other folders)
