name:                haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mattheww@pennwell.com/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Williamson
maintainer:          mattheww@pennwell.com
copyright:           PennWell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Overloaded
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , constraints
                     , http-types
                     , lens
                     , tardis
                     , wreq
  default-language:    Haskell2010

-- executable haskell-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , haskell
--   default-language:    Haskell2010

test-suite haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CacheSpec
  build-depends:       base
                     , bytestring
                     , haskell
                     , lens
                     , tasty
                     , tasty-hunit
                     , wreq
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattheww@pennwell.com/haskell
