name:                wreqd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattheww@pennwell.com/wreqd#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Williamson
maintainer:          mattheww@pennwell.com
copyright:           PennWell
category:            Private
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wreqd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , http-client
                     , http-client-openssl
                     , HsOpenSSL
                     , lens
                     , wreq
                     , wreqd
  default-language:    Haskell2010

test-suite wreqd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wreqd
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattheww@pennwell.com/wreqd
